# viz-libs-comparison

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
data/: __init__.py  loaders.py
docs/: 00_smoke_test.md  01_basics.md  02_statistical.md  03_faceting.md  04_multilayer.md  05_interactive.md  06_geospatial.md  07_large_data.md  08_dashboards.md  index.md
docs/assets/: embed.css
notebooks/: 00_index.py  00_smoke_test.py  01_basics.py  01_dispatch.py  02_faceted.py  03_performance.py  04_distribution.py  05_uncertainty.py  06_linked.py  07_dashboard.py
notebooks/public/: dispatch.parquet
scripts/: build_data.py  export.sh
