[project]
name = "viz-libs-comparison"
version = "0.0.1"
description = "Task-oriented comparison of Plotly, Altair, and Bokeh for xarray-based energy-system analysis."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "marimo==0.23.2",
    "plotly==6.7.0",
    "altair==6.1.0",
    "bokeh==3.9.0",
    "palmerpenguins==0.1.4",
    "pandas==2.3.3",
    "pyarrow==24.0.0",
    "numpy==2.4.4",
    "xarray==2026.4.0",
]

[dependency-groups]
docs = [
    "mkdocs-material==9.7.6",
]
dev = [
    {include-group = "docs"},
    "ruff==0.15.11",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
